syntax = "proto3";
package proto;

option go_package = "bookservice/src/cmd/proto"; 

service BookService {

    rpc CreateBook (Book) returns (Book) {}
    rpc GetAllBooks (Empty) returns (BookList) {}
    rpc GetBookById (BookId) returns (Book) {}
    rpc UpdateBook (Book) returns (Book) {}
    rpc DeleteBook (BookId) returns (Book) {}


}

message Book {
    int32 id = 1;
    string title = 2; 
    string author = 3;
    string isbn = 4;
}

message Empty {}

message BookList {
    repeated Book books = 1;
}

message BookId {
    int32 id =1; 
}